# ReBrewie-LVGL

./: .gitignore  CMakeLists.txt  CMakePresets.json  lv_conf.h
cmake/: toolchain-armhf-bullseye.cmake
src/: main.c
